# rails-signal-firmware

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
